--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>org.http4k</groupId>
-            <artifactId>http4k-server-undertow</artifactId>
+            <artifactId>http4k-server-netty</artifactId>
             <version>3.1.3</version>
         </dependency>
 
