--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -1,5 +1,5 @@
 # SLF4J's SimpleLogger configuration file
-# Simple implementation of Logger that sends all enabled log messages, for all defined loggers, to System.err.
+# Simple implementation of Logger that sends all enabled log messages for all defined loggers to System.out
 # Taken from https://stackoverflow.com/a/23391374/4106848
 # Documentation: https://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
 org.slf4j.simpleLogger.logFile=System.out
