Added some logging statements & the bot now joins a specified channel

--- a/src/main/resources/config.example.ini
+++ b/src/main/resources/config.example.ini
@@ -11,6 +11,8 @@ password = ~
 virtualserver = 1
 ; The nickname of the bot
 nickname = SteamConnect
+; The name of the channel the bot should join
+channel = Steam
 
 [web]
 ; Which domain should be serverd by the web server
@@ -31,4 +33,6 @@ password = ~
 database = anurabot
 
 [steam]
+; The Steam web api key is used for getting the games of a user
+; You can get one here: http://steamcommunity.com/dev/apikey
 api_key = ~
