Added basic Steam authentication

--- a/src/main/resources/config.example.ini
+++ b/src/main/resources/config.example.ini
@@ -14,7 +14,15 @@ nickname = SteamConnect
 ; The name of the channel the bot should join
 channel = Steam
 
+[time]
+; After 10 minutes the user gets the group 'active_10_min'
+10m = active_10_min
+; After 2 hours the group of 10 minutes will be replaced with the group 'active_2_hours'
+2h = active_2_hours
+
 [web]
+; Whether the internal web server should be started
+enabled = true
 ; Which domain should be serverd by the web server
 host = example.com
 ; The port for the web server
