--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>3.1.3</version>
         </dependency>
 
+        <!-- OpenID -->
+        <dependency>
+            <groupId>org.openid4java</groupId>
+            <artifactId>openid4java</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- Database connection -->
         <dependency>
             <groupId>mysql</groupId>
