Refactored the bot into two Maven modules

--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -22,7 +22,8 @@ channel = Steam
 
 [web]
 ; Whether the internal web server should be started
-enabled = true
+; This ONLY WORKS if the jar was compiled with the web module!
+enabled = false
 ; Which domain should be serverd by the web server
 host = example.com
 ; The port for the web server
