--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -13,6 +13,9 @@ virtualserver = 1
 nickname = SteamConnect
 ; The name of the channel the bot should join
 channel = Steam
+; The flood rate setting of the server. Can be DEFAULT or UNLIMITED
+; Read more here: https://github.com/TheHolyWaffle/TeamSpeak-3-Java-API#floodrate
+flood_rate = DEFAULT
 
 [time]
 ; After 10 minutes the user gets the group 'active_10_min'
