Added a table for the time based Teamspeak groups

--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -17,12 +17,6 @@ channel = Steam
 ; Read more here: https://github.com/TheHolyWaffle/TeamSpeak-3-Java-API#floodrate
 flood_rate = DEFAULT
 
-[time]
-; After 10 minutes the user gets the group 'active_10_min'
-10m = active_10_min
-; After 2 hours the group of 10 minutes will be replaced with the group 'active_2_hours'
-2h = active_2_hours
-
 [web]
 ; Whether the internal web server should be started
 ; This ONLY WORKS if the jar was compiled with the web module!
@@ -31,6 +25,9 @@ enabled = false
 host = example.com
 ; The port for the web server
 port = 8080
+; The external url is a link to your own website with Steam authentication
+; Set this property if the internal web server is disabled!
+external_url = https://example.com
 
 [mysql]
 ; The host of the mysql server
