Fully implemented the NettyWebService

--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -27,6 +27,7 @@ host = example.com
 port = 8080
 ; The external url is a link to your own website with Steam authentication
 ; Set this property if the internal web server is disabled!
+; The unique id of the client which requested the authentication will be appended the url as an GET parameter
 external_url = https://example.com
 
 [mysql]
