Updated dependencies & Added support for a proxy server

--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -25,6 +25,9 @@ enabled = false
 host = example.com
 ; The port for the web server
 port = 8080
+; Set it the url of your proxy server if you use one (should start with http:// or https://)
+; Otherwise leave it as it is (null)
+proxy_url = null
 ; The external url is a link to your own website with Steam authentication
 ; Set this property if the internal web server is disabled!
 ; The unique id of the client which requested the authentication will be appended the url as an GET parameter
