Improved the logging (the log of openid is now printed by slf4j-simple)

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -45,6 +45,17 @@
             <groupId>org.openid4java</groupId>
             <artifactId>openid4java</artifactId>
             <version>1.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.8.0-beta2</version>
         </dependency>
 
     </dependencies>
