--- a/base/pom.xml
+++ b/base/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
+            <version>1.8.0-beta2</version>
         </dependency>
 
         <!-- Database connection -->
