--- a/base/src/main/resources/simplelogger.properties
+++ b/base/src/main/resources/simplelogger.properties
@@ -8,5 +8,6 @@ org.slf4j.simpleLogger.defaultLogLevel=info
 org.slf4j.simpleLogger.showDateTime=false
 org.slf4j.simpleLogger.dateTimeFormat=dd.MM.yyyy HH:mm
 org.slf4j.simpleLogger.showThreadName=false
-org.slf4j.simpleLogger.showShortLogName=true
+org.slf4j.simpleLogger.showLogName=true
+org.slf4j.simpleLogger.showShortLogName=false
 org.slf4j.simpleLogger.levelInBrackets=true
