--- a/base/src/main/resources/simplelogger.properties
+++ b/base/src/main/resources/simplelogger.properties
@@ -4,6 +4,8 @@
 # Documentation: https://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
 org.slf4j.simpleLogger.logFile=System.out
 org.slf4j.simpleLogger.defaultLogLevel=info
+# We want to keep track of all TS3 exceptions
+org.slf4j.simpleLogger.log.com.github=trace
 # This is disabled, because it's also logged by the journal
 org.slf4j.simpleLogger.showDateTime=false
 org.slf4j.simpleLogger.dateTimeFormat=dd.MM.yyyy HH:mm
