Adds the configuration option 'maxSteamGroups'

--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -16,6 +16,8 @@ channel = Steam
 ; The flood rate setting of the server. Can be DEFAULT or UNLIMITED
 ; Read more here: https://github.com/TheHolyWaffle/TeamSpeak-3-Java-API#floodrate
 flood_rate = DEFAULT
+; How much Steam games may the user select to be shown
+maxSteamGroups = 5
 
 [web]
 ; Whether the internal web server should be started
