--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -16,8 +16,6 @@ channel = Steam
 ; The flood rate setting of the server. Can be DEFAULT or UNLIMITED
 ; Read more here: https://github.com/TheHolyWaffle/TeamSpeak-3-Java-API#floodrate
 flood_rate = DEFAULT
-; How much Steam games may the user select to be shown
-maxSteamGroups = 5
 
 [web]
 ; Whether the internal web server should be started
@@ -30,9 +28,13 @@ port = 8080
 ; Set it the url of your proxy server if you use one (should start with http:// or https://)
 ; Otherwise leave it as it is (null)
 proxy_url = null
+; How much Steam games may the user select to be shown
+maxSteamGroups = 5
 ; The external url is a link to your own website with Steam authentication
 ; Set this property if the internal web server is disabled!
-; The unique id of the client which requested the authentication will be appended the url as an GET parameter
+; There are two query paramets which will be appended to the url:
+; 1. -- 'uid'  -- The unique id of the client which requested a actopm
+; 2. -- 'call' -- The action the user want to perform. Can be 'authenticate' or 'selectgames'
 external_url = https://example.com
 
 [mysql]
