Implements 'Select shown games' (#10)
Users can select games which should be shown as Teamspeak groups

* Adds the table 'selected_game'
* Adds the config option 'web.maxSteamGroups'
* Improves the web handling backend a lot
* Uses string templates for generating the login url

--- a/base/src/main/resources/config.example.ini
+++ b/base/src/main/resources/config.example.ini
@@ -28,9 +28,13 @@ port = 8080
 ; Set it the url of your proxy server if you use one (should start with http:// or https://)
 ; Otherwise leave it as it is (null)
 proxy_url = null
+; How much Steam games may the user select to be shown
+maxSteamGroups = 5
 ; The external url is a link to your own website with Steam authentication
 ; Set this property if the internal web server is disabled!
-; The unique id of the client which requested the authentication will be appended the url as an GET parameter
+; There are two query paramets which will be appended to the url:
+; 1. -- 'uid'  -- The unique id of the client which requested a actopm
+; 2. -- 'call' -- The action the user want to perform. Can be 'authenticate' or 'selectgames'
 external_url = https://example.com
 
 [mysql]
