--- a/base/pom.xml
+++ b/base/pom.xml
@@ -25,7 +25,7 @@
                 <groupId>org.jdbi</groupId>
                 <artifactId>jdbi3-bom</artifactId>
                 <type>pom</type>
-                <version>3.3.0</version>
+                <version>3.8.2</version>
                 <scope>import</scope>
             </dependency>
         </dependencies>
@@ -43,21 +43,21 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20180130</version>
+            <version>20180813</version>
         </dependency>
 
         <!-- Logger (SLF4J Implementation) -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.8.0-beta2</version>
+            <version>2.0.0-alpha0</version>
         </dependency>
 
         <!-- Database connection -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.12</version>
+            <version>8.0.16</version>
         </dependency>
         <dependency>
             <groupId>org.jdbi</groupId>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>com.github.theholywaffle</groupId>
             <artifactId>teamspeak3-api</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0</version>
         </dependency>
 
         <!-- Kotlin runtime -->
