--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,7 +17,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <http4k.version>4.4.0.1</http4k.version>
+        <http4k.version>6.14.0.0</http4k.version>
     </properties>
 
 
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>2.0.0-alpha1</version>
+            <version>2.0.17</version>
         </dependency>
 
     </dependencies>
