--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,10 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - name: Set up Zulu JDK 1.21
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'zulu'
+          java-version: 21
       - name: Build with Maven
         run: mvn -B package --file pom.xml
