--- a/base/pom.xml
+++ b/base/pom.xml
@@ -34,9 +34,9 @@
     <dependencies>
         <!-- Configuration (.ini) -->
         <dependency>
-            <groupId>commons-configuration</groupId>
-            <artifactId>commons-configuration</artifactId>
-            <version>1.10</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.12.0</version>
         </dependency>
 
         <!-- Json Parser -->
